page recherche fonctionnelle

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -13,6 +13,14 @@ ul:not(ul:first-child) {
   background-color: green;
 }
 
+.result {
+  display: none;
+}
+
+.active {
+  display: block;
+}
+
 // .active {
 //   display: block;
 // }
