--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,7 @@
+body {
+  width: 100%;
+  scroll-behavior: smooth;
+}
 .result {
   // background-color: red;
   height: auto;
@@ -21,6 +25,37 @@ ul:not(ul:first-child) {
   display: block;
 }
 
-// .active {
-//   display: block;
-// }
+.page {
+  padding: 32px;
+}
+
+[data-theme="dark"] {
+  background: #000000; /* fallback for old browsers */
+  color: rgb(255, 255, 255);
+
+  .toggle__circle {
+    background-color: #fff;
+  }
+}
+
+header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.toggle {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  cursor: pointer;
+  width: 100%;
+
+  &__circle {
+    background-color: #000000;
+    height: 15px;
+    width: 15px;
+    border-radius: 100%;
+    margin-left: 0.3vw;
+  }
+}
