--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,11 @@ a:visited {
   color: inherit;
 }
 
+body {
+  width: 100%;
+  scroll-behavior: smooth;
+}
+
 .result {
   height: auto;
   width: 500px;
@@ -33,5 +38,51 @@ ul:not(ul:first-child) {
 
 .active {
   display: block;
+}
+
+.page {
+  padding: 32px;
+}
+
+[data-theme="dark"] {
+  background: #000000;
+  /* fallback for old browsers */
+  color: white;
+}
+
+[data-theme="dark"] .toggle__circle {
+  background-color: #fff;
+}
+
+header {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  cursor: pointer;
+  width: 100%;
+}
+
+.toggle__circle {
+  background-color: #000000;
+  height: 15px;
+  width: 15px;
+  border-radius: 100%;
+  margin-left: 0.3vw;
 }
 /*# sourceMappingURL=main.css.map */
