--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,14 +14,28 @@ a:visited {
   color: inherit;
 }
 
+/* ------------------------------------------------
+                    GLOBAL
+--------------------------------------------------- */
 body {
-  width: 100%;
+  overflow-x: hidden;
   scroll-behavior: smooth;
+  width: 100%;
+}
+
+h1 {
+  font-size: 100px;
+  display: inline;
+}
+
+.page-wrapper {
+  padding: 32px;
 }
 
 .result {
   height: auto;
   width: 500px;
+  display: none;
 }
 
 ul:first-child {
@@ -32,26 +46,8 @@ ul:not(ul:first-child) {
   background-color: green;
 }
 
-.result {
-  display: none;
-}
-
 .active {
   display: block;
-}
-
-.page {
-  padding: 32px;
-}
-
-[data-theme="dark"] {
-  background: #000000;
-  /* fallback for old browsers */
-  color: white;
-}
-
-[data-theme="dark"] .toggle__circle {
-  background-color: #fff;
 }
 
 header {
@@ -62,6 +58,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
 }
 
 .toggle {
@@ -75,7 +72,8 @@ header {
       -ms-flex-pack: end;
           justify-content: flex-end;
   cursor: pointer;
-  width: 100%;
+  justify-self: flex-end;
+  margin-left: auto;
 }
 
 .toggle__circle {
@@ -84,5 +82,94 @@ header {
   width: 15px;
   border-radius: 100%;
   margin-left: 0.3vw;
+}
+
+/* ------------------------------------------------
+                    LOADER
+--------------------------------------------------- */
+.loader {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  z-index: 1000;
+  -webkit-animation: 1.2s ease-in-out 3s loader forwards;
+          animation: 1.2s ease-in-out 3s loader forwards;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+}
+
+.loader h1 {
+  color: #ffffff;
+}
+
+@-webkit-keyframes loader {
+  from {
+    top: 0;
+  }
+  to {
+    top: -100%;
+  }
+}
+
+@keyframes loader {
+  from {
+    top: 0;
+  }
+  to {
+    top: -100%;
+  }
+}
+
+/* ------------------------------------------------
+                    CURSOR
+--------------------------------------------------- */
+.cursor {
+  background: white;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  mix-blend-mode: difference;
+  -webkit-transition: height 300ms ease, width 300ms ease;
+  transition: height 300ms ease, width 300ms ease;
+}
+
+.cursor__big {
+  height: 35px;
+  width: 35px;
+}
+
+/* ------------------------------------------------
+                    DARKMODE
+--------------------------------------------------- */
+[data-theme="dark"] {
+  background: #000000;
+  color: white;
+}
+
+[data-theme="dark"] .toggle__circle {
+  background-color: #fff;
+}
+
+[data-theme="light"],
+[data-theme=""] {
+  background: #ffffff;
+  color: black;
+}
+
+[data-theme="light"] .toggle__circle,
+[data-theme=""] .toggle__circle {
+  background-color: black;
 }
 /*# sourceMappingURL=main.css.map */
