--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,19 @@
+/* SUMMARY 
+
+- GLOBAL
+- HEADER
+- HOME
+- FOOTER
+
+*/
+
 /* ------------------------------------------------
                     GLOBAL
 --------------------------------------------------- */
+:root {
+  --page-gutter: 32px;
+}
+
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -10,17 +23,67 @@ body {
 h1 {
   font-size: 100px;
   display: inline;
+  font-family: "bosh";
 }
 
 .page-wrapper {
-  padding: 32px;
+  padding: var(--page-gutter);
 }
 
-.result {
+/* ------------------------------------------------
+                    GLOBAL
+--------------------------------------------------- */
+header {
+  height: calc(13vh - var(--page-gutter));
+  width: 100%;
+  display: flex;
+  align-items: center;
+  img {
+    height: 20px;
+    width: 20px;
+  }
+}
+
+.toggle {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  justify-self: flex-end;
+  margin-left: auto;
+  cursor: pointer;
+
+  &__circle {
+    background-color: #000000;
+    height: 15px;
+    width: 15px;
+    border-radius: 100%;
+    margin-left: 0.3vw;
+  }
+}
+
+.search {
+  // margin-left: auto;
+  // background-color: red;
+  // display: none;
+  position: absolute;
+  top: 0;
+  right: -35%;
+  height: 100vh;
+  width: 35%;
+  z-index: 10;
+  transition: all 1s ease-in-out;
+
+  &--view {
+    right: 0%;
+  }
+}
+
+.search__result {
   height: auto;
   width: 500px;
-  // background-color: red;
   display: none;
+  z-index: 10;
+  position: absolute;
 }
 
 ul:first-child {
@@ -35,26 +98,81 @@ ul:not(ul:first-child) {
   display: block;
 }
 
-header {
-  width: 100%;
+.menu-tog {
+  position: relative;
   display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.toggle {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  flex-direction: column;
+  width: 30px;
+  height: 10px;
+  justify-content: space-around;
   cursor: pointer;
-  justify-self: flex-end;
-  margin-left: auto;
-
-  &__circle {
-    background-color: #000000;
-    height: 15px;
-    width: 15px;
-    border-radius: 100%;
-    margin-left: 0.3vw;
-  }
+  transition: 0.5s;
+  transform: center;
 }
+
+.menu-tog span {
+  height: 2px;
+  background-color: rgb(0, 0, 0);
+  transform-origin: center;
+  transition: 0.2s;
+}
+
+.menu-tog span:nth-child(1) {
+  width: 100%;
+}
+
+.menu-tog span:nth-child(2) {
+  width: 100%;
+}
+
+.menu-tog.ready span {
+  position: absolute;
+  left: 0%;
+  width: 100%;
+}
+
+.menu-tog.ready span:nth-child(1) {
+  top: 40%;
+  transform: rotate(45deg);
+}
+
+.menu-tog.ready span:nth-child(2) {
+  bottom: 40%;
+  transform: rotate(-45deg);
+}
+
+/* ------------------------------------------------
+                    HOME
+--------------------------------------------------- */
+.grid__img {
+  height: 500px;
+  width: 350px;
+  background-image: url("../images/Garcin.jpg");
+  background-repeat: no-repeat;
+}
+
+.home {
+  height: 74vh;
+  width: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* ------------------------------------------------
+                    FOOTER
+--------------------------------------------------- */
+footer {
+  height: calc(13vh - var(--page-gutter));
+}
+
+// svg {
+//   height: 100%;
+//   width: 100%;
+// }
+
+// path {
+//   height: 20px;
+//   width: 20px;
+// }
