--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -34,19 +34,27 @@
 --------------------------------------------------- */
 .cursor {
   background: white;
-  height: 15px;
-  width: 15px;
+  // height: 15px;
+  // width: 15px;
+  width: 1em;
+  height: 1em;
   border-radius: 50%;
   position: absolute;
-  top: 0;
-  left: 0;
-  // transform: translate(-50%, -50%);
+  // top: 0;
+  // left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   mix-blend-mode: difference;
   transition: height 300ms ease, width 300ms ease;
+  transition: transform 300ms ease, transform 300ms ease;
+  pointer-events: none;
+  z-index: 15;
 
   &__big {
-    height: 35px;
-    width: 35px;
+    // height: 35px;
+    // width: 35px;
+    transform: scale(5);
   }
 }
 
@@ -60,6 +68,23 @@
   .toggle__circle {
     background-color: #fff;
   }
+
+  .search {
+    background-color: white;
+  }
+
+  // .off path {
+  //   fill: #000;
+  // }
+
+  .menu-tog span {
+    background-color: white;
+  }
+
+  .search__value {
+    // background-color: rgb(255, 253, 253);
+    color: rgb(0, 0, 0);
+  }
 }
 
 [data-theme="light"],
@@ -69,5 +94,22 @@
 
   .toggle__circle {
     background-color: rgb(0, 0, 0);
+  }
+
+  .search {
+    background-color: black;
+  }
+
+  // .off path {
+  //   fill: #fff;
+  // }
+
+  .menu-tog span {
+    background-color: rgb(0, 0, 0);
+  }
+
+  .search__value {
+    // background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
 }
