--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,9 +14,41 @@ a:visited {
   color: inherit;
 }
 
+input,
+button {
+  color: inherit;
+  border: none;
+  background-color: inherit;
+}
+
+input[type="submit"] {
+  cursor: pointer;
+}
+
+label {
+  display: none;
+}
+
+@font-face {
+  font-family: "bosh";
+  src: url("../font/Bosch.otf");
+}
+
+/* SUMMARY 
+
+- GLOBAL
+- HEADER
+- HOME
+- FOOTER
+
+*/
 /* ------------------------------------------------
                     GLOBAL
 --------------------------------------------------- */
+:root {
+  --page-gutter: 32px;
+}
+
 body {
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -26,16 +58,76 @@ body {
 h1 {
   font-size: 100px;
   display: inline;
+  font-family: "bosh";
 }
 
 .page-wrapper {
-  padding: 32px;
+  padding: var(--page-gutter);
 }
 
-.result {
+/* ------------------------------------------------
+                    GLOBAL
+--------------------------------------------------- */
+header {
+  height: calc(13vh - var(--page-gutter));
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header img {
+  height: 20px;
+  width: 20px;
+}
+
+.toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  justify-self: flex-end;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.toggle__circle {
+  background-color: #000000;
+  height: 15px;
+  width: 15px;
+  border-radius: 100%;
+  margin-left: 0.3vw;
+}
+
+.search {
+  position: absolute;
+  top: 0;
+  right: -35%;
+  height: 100vh;
+  width: 35%;
+  z-index: 10;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+
+.search--view {
+  right: 0%;
+}
+
+.search__result {
   height: auto;
   width: 500px;
   display: none;
+  z-index: 10;
+  position: absolute;
 }
 
 ul:first-child {
@@ -50,38 +142,92 @@ ul:not(ul:first-child) {
   display: block;
 }
 
-header {
-  width: 100%;
+.menu-tog {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-}
-
-.toggle {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 30px;
+  height: 10px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   cursor: pointer;
-  justify-self: flex-end;
-  margin-left: auto;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: center;
+          transform: center;
 }
 
-.toggle__circle {
-  background-color: #000000;
-  height: 15px;
-  width: 15px;
-  border-radius: 100%;
-  margin-left: 0.3vw;
+.menu-tog span {
+  height: 2px;
+  background-color: black;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.menu-tog span:nth-child(1) {
+  width: 100%;
+}
+
+.menu-tog span:nth-child(2) {
+  width: 100%;
+}
+
+.menu-tog.ready span {
+  position: absolute;
+  left: 0%;
+  width: 100%;
+}
+
+.menu-tog.ready span:nth-child(1) {
+  top: 40%;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.menu-tog.ready span:nth-child(2) {
+  bottom: 40%;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+/* ------------------------------------------------
+                    HOME
+--------------------------------------------------- */
+.grid__img {
+  height: 500px;
+  width: 350px;
+  background-image: url("../images/Garcin.jpg");
+  background-repeat: no-repeat;
+}
+
+.home {
+  height: 74vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+/* ------------------------------------------------
+                    FOOTER
+--------------------------------------------------- */
+footer {
+  height: calc(13vh - var(--page-gutter));
 }
 
 /* ------------------------------------------------
@@ -134,20 +280,28 @@ header {
 --------------------------------------------------- */
 .cursor {
   background: white;
-  height: 15px;
-  width: 15px;
+  width: 1em;
+  height: 1em;
   border-radius: 50%;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   mix-blend-mode: difference;
   -webkit-transition: height 300ms ease, width 300ms ease;
   transition: height 300ms ease, width 300ms ease;
+  -webkit-transition: -webkit-transform 300ms ease, -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease, -webkit-transform 300ms ease;
+  transition: transform 300ms ease, transform 300ms ease;
+  transition: transform 300ms ease, transform 300ms ease, -webkit-transform 300ms ease, -webkit-transform 300ms ease;
+  pointer-events: none;
+  z-index: 15;
 }
 
 .cursor__big {
-  height: 35px;
-  width: 35px;
+  -webkit-transform: scale(5);
+          transform: scale(5);
 }
 
 /* ------------------------------------------------
@@ -162,6 +316,18 @@ header {
   background-color: #fff;
 }
 
+[data-theme="dark"] .search {
+  background-color: white;
+}
+
+[data-theme="dark"] .menu-tog span {
+  background-color: white;
+}
+
+[data-theme="dark"] .search__value {
+  color: black;
+}
+
 [data-theme="light"],
 [data-theme=""] {
   background: #ffffff;
@@ -171,5 +337,20 @@ header {
 [data-theme="light"] .toggle__circle,
 [data-theme=""] .toggle__circle {
   background-color: black;
+}
+
+[data-theme="light"] .search,
+[data-theme=""] .search {
+  background-color: black;
+}
+
+[data-theme="light"] .menu-tog span,
+[data-theme=""] .menu-tog span {
+  background-color: black;
+}
+
+[data-theme="light"] .search__value,
+[data-theme=""] .search__value {
+  color: white;
 }
 /*# sourceMappingURL=main.css.map */
