--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -32,3 +32,16 @@ label {
   font-family: "bosh";
   src: url("../font/Bosch.otf");
 }
+
+// h1,
+// h2,
+// h3,
+// a,
+// p,
+// li {
+//   transition: color 1000ms ease-in-out;
+// }
+
+// div {
+//   transition: color 1000ms ease-in-out, background-color 1000ms ease-in-out;
+// }
