--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,4 @@
-@import "./reset", "./global", "./utils";
+// @import "./reset", "./global", "./utils";
+
+@import "base/reset", "base/base";
+@import "components/loader", "components/cursor", "components/darkmode";
