--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -18,6 +18,7 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   width: 100%;
+  max-height: 100vh;
 }
 
 h1 {
@@ -28,6 +29,7 @@ h1 {
 
 .page-wrapper {
   padding: var(--page-gutter);
+  overflow-x: hidden;
 }
 
 /* ------------------------------------------------
@@ -48,6 +50,10 @@ header {
 }
 
 .darkmode {
+  position: fixed;
+  top: 85%;
+  left: 0;
+  transform: rotate(-90deg);
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -70,18 +76,30 @@ header {
   // display: none;
   position: absolute;
   top: 0;
-  right: -35%;
+  right: -100%;
   height: 100vh;
-  width: 35%;
+  width: 100%;
   z-index: 10;
   transition: all 1s ease-in-out;
+  padding: calc(var(--page-gutter) * 4);
+  // right: -35%;
+  // width: 35%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
 
   &__result {
-    height: auto;
-    width: 500px;
+    overflow: scroll;
+    max-height: 60vh;
+    width: 80vw;
     display: none;
     z-index: 10;
-    position: absolute;
+    font-size: 32px;
+    // position: absolute;
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     ul:first-child {
       background-color: blue;
@@ -92,8 +110,23 @@ header {
     }
   }
 
+  form {
+    width: 80vw;
+  }
+  input[type="text"] {
+    border-bottom: 2px solid black;
+    width: 100%;
+    padding: 0 2vw;
+    height: 15vh;
+    font-size: 64px;
+  }
+
   &--view {
     right: 0%;
+  }
+
+  input[type="submit"] {
+    display: none;
   }
 }
 
