--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 // @import "./reset", "./global", "./utils";
 
 @import "base/reset", "base/base";
-@import "components/loader", "components/cursor", "components/darkmode";
+@import "components/loader", "components/cursor", "components/darkmode",
+  "components/transition";
