--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -149,9 +149,17 @@ header nav {
           flex-direction: column;
 }
 
+.search hr {
+  width: 25%;
+  margin: auto;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
 .search__result {
   overflow: scroll;
-  max-height: 60vh;
+  max-height: 80vh;
   width: 80vw;
   display: none;
   z-index: 10;
@@ -162,12 +170,8 @@ header nav {
   display: none;
 }
 
-.search__result ul:first-child {
-  background-color: blue;
-}
-
-.search__result ul:not(ul:first-child) {
-  background-color: green;
+.search__result li {
+  padding: 1vw;
 }
 
 .search form {
@@ -175,7 +179,6 @@ header nav {
 }
 
 .search input[type="text"] {
-  border-bottom: 2px solid black;
   width: 100%;
   padding: 0 2vw;
   height: 15vh;
@@ -390,8 +393,16 @@ footer {
   color: black;
 }
 
+[data-theme="dark"] .search__result {
+  color: black;
+}
+
 [data-theme="dark"] input[type="submit"] {
   color: black;
+}
+
+[data-theme="dark"] input[type="text"] {
+  border-bottom: 2px solid black;
 }
 
 [data-theme="light"],
@@ -428,6 +439,16 @@ footer {
   background-color: black;
 }
 
+[data-theme="light"] .search hr,
+[data-theme=""] .search hr {
+  border-bottom: 2px dashed white;
+}
+
+[data-theme="light"] .search__result,
+[data-theme=""] .search__result {
+  color: white;
+}
+
 [data-theme="light"] .search__value,
 [data-theme=""] .search__value {
   color: white;
@@ -437,5 +458,57 @@ footer {
 [data-theme=""] input[type="submit"] {
   color: white;
   border: 1px solid white;
+}
+
+[data-theme="light"] input[type="text"],
+[data-theme=""] input[type="text"] {
+  border-bottom: 2px solid white;
+}
+
+/* ------------------------------------------------
+                    TRANSITIONS
+--------------------------------------------------- */
+div.wiper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  -webkit-transform: translate(-100%, 0%);
+          transform: translate(-100%, 0%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+}
+
+div.wiper img {
+  width: 75px;
+  -webkit-animation: spin 5s infinite linear;
+          animation: spin 5s infinite linear;
+}
+
+div.wiper div {
+  margin: 10px 0 0 0;
+  height: 90px;
+  overflow: hidden;
+}
+
+div.wiper h2 {
+  font-size: 60px;
+  line-height: 1.5;
+  height: 90px;
 }
 /*# sourceMappingURL=main.css.map */
