--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,6 +3,7 @@
 - GLOBAL
 - HEADER
 - HOME
+- ELEMENT
 - FOOTER
 
 */
@@ -12,6 +13,9 @@
 --------------------------------------------------- */
 :root {
   --page-gutter: 32px;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -71,10 +75,7 @@ header {
 }
 
 .search {
-  // margin-left: auto;
-  // background-color: red;
-  // display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: -100%;
   height: 100vh;
@@ -197,6 +198,23 @@ header {
 /* ------------------------------------------------
                     HOME
 --------------------------------------------------- */
+main {
+  height: 74vh;
+  width: 100%;
+
+  article {
+    max-height: 74vh;
+  }
+}
+
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .grid__img {
   height: 500px;
   width: 350px;
@@ -204,13 +222,107 @@ header {
   background-repeat: no-repeat;
 }
 
-.home {
-  height: 74vh;
-  width: 100%;
+.logo {
+  position: fixed;
+  right: 0;
+  left: 0;
+  font-size: 8vw;
+  text-align: center;
+  z-index: 1000;
+}
+#logo-top {
+  top: 0;
+  transform: translate3d(0, -50%, 0);
+}
+#logo-bottom {
+  bottom: 0;
+  transform: translate3d(0, 50%, 0);
+}
+
+/* ------------------------------------------------
+                    ELEMENT
+--------------------------------------------------- */
+.element {
+  // background-color: red;
+  height: 100%;
   display: flex;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
+
+  hr {
+    background-color: #424242;
+    border: 0.5px solid #adadad;
+  }
+
+  .sec {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .image {
+    width: clamp(400px, 60vw, 600px);
+    height: clamp(400px, 60vw, 600px);
+    background-position: center;
+    background-size: cover;
+  }
+
+  img {
+    width: clamp(400px, 60vw, 600px);
+    // margin-right: auto;
+    flex: 1;
+  }
+  section {
+    padding: 1vw 0 0 0;
+    font-size: clamp(0.6em, 1vw, 2vw);
+    flex: 20;
+
+    h2:not(h2:nth-child(4)) {
+      width: auto;
+      margin: 1vw 0;
+    }
+
+    h2:nth-child(1) {
+      font-size: 32px;
+    }
+  }
+}
+
+/* ------------------------------------------------
+                    RECHERCHE
+--------------------------------------------------- */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  flex-direction: row;
+  flex-wrap: wrap;
+  // height: 100vh;
+
+  a {
+    flex: 1;
+    margin: 64px;
+  }
+
+  section {
+    word-break: break-all;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    img {
+      width: 400px;
+      height: 200px;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container a section img {
+    width: 300px;
+    height: 150px;
+  }
 }
 
 /* ------------------------------------------------
@@ -219,13 +331,3 @@ header {
 footer {
   height: calc(13vh - var(--page-gutter));
 }
-
-// svg {
-//   height: 100%;
-//   width: 100%;
-// }
-
-// path {
-//   height: 20px;
-//   width: 20px;
-// }
